--- a/sources/styles/custom/input.css
+++ b/sources/styles/custom/input.css
@@ -1,4 +1,5 @@
 .webix_el_text input,
+.webix_el_search input,
 .webix_el_combo input,
 .webix_el_datepicker input,
 .webix_el_textarea textarea,
@@ -11,6 +12,7 @@
 }
 
 .webix_el_text input:hover,
+.webix_el_search input:hover,
 .webix_el_combo input:hover,
 .webix_el_datepicker input:hover,
 .webix_el_textarea textarea:hover,
@@ -19,6 +21,7 @@
 .webix_el_richselect .webix_inp_static:hover,
 .webix_el_colorpicker .webix_inp_static:hover,
 .webix_el_text input:focus,
+.webix_el_search input:focus,
 .webix_el_combo input:focus,
 .webix_el_datepicker input:focus,
 .webix_el_textarea textarea:focus,
@@ -27,6 +30,7 @@
 .webix_el_richselect .webix_inp_static:focus,
 .webix_el_colorpicker .webix_inp_static:focus,
 .webix_el_text input:active,
+.webix_el_search input:active,
 .webix_el_combo input:active,
 .webix_el_datepicker input:active,
 .webix_el_textarea textarea:active,
