--- a/sources/styles/custom/loading.css
+++ b/sources/styles/custom/loading.css
@@ -10,14 +10,14 @@
     border: 8px solid #e0e0e0;
     border-top: 8px solid var(--color-primary);
     border-radius: 50%;
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     align-self: center;
     animation: spin 1s linear infinite;
 }
 
 .loading-text {
-    margin-top: 15px;
+    /* margin-top: 5px; */
     font-size: 16px;
     color: #333;
     align-self: center;
