--- a/sources/styles/custom/button.css
+++ b/sources/styles/custom/button.css
@@ -41,3 +41,17 @@
 .webix_secondary .webix_button .webix_icon_btn {
     color: var(--color-secondary);
 }
+
+.webix_button .webix_icon.spin {
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
