--- a/sources/styles/custom/input.css
+++ b/sources/styles/custom/input.css
@@ -46,4 +46,17 @@
     color: var(--color-text-muted)
 }
 
+.webix_input_icon {
+    color: var(--color-secondary);
+    opacity: 0.7;
+}
+
+
+.calc-input input {
+    font-size: 30px;
+    padding: 8px 12px;
+    text-align: right !important;
+    color: blueviolet;
+}
+
 /* This version of Webix is not intended for using outside of webix.com */
