--- a/sources/styles/custom/login.css
+++ b/sources/styles/custom/login.css
@@ -15,9 +15,11 @@
 }
 
 .login-logo {
-    font-size: 20px;
-    font-weight: bold;
-    color: var(--color-secondary-active);
+    display: inline-block;
+    background: url("/data/images/LogoLogin.png") no-repeat center center;
+    background-size: contain;
+    width: calc(189px * 0.7);
+    height: calc(58px * 0.7);
 }
 
 .login-title {
